# ds-advent

./: .gitignore  Cargo.toml  README.md
challenge0/: Cargo.toml
challenge0/src/: main.rs
challenge0_old/: Cargo.toml
challenge0_old/src/: main.rs
challenge1/: Cargo.toml
challenge1/src/: main.rs
challenge1_old/: Cargo.toml
challenge1_old/src/: main.rs
challenge2/: Cargo.toml  README.md
challenge2/src/: main.rs
challenge2_old/: Cargo.toml
challenge3/: Cargo.toml
challenge4/: Cargo.toml  README.md
challenge4/src/: main.rs
challenge5/: Cargo.toml  README.md
challenge5/src/: main.rs
challenge6/: Cargo.toml  README.md
challenge6/src/: main.rs
maelstrom/: Cargo.toml
maelstrom/src/: kv.rs  lib.rs  node.rs  rpc_error.rs  types.rs
maelstrom_csp/: Cargo.toml
maelstrom_csp/src/: io.rs  lib.rs  message.rs  node.rs  rpc_error.rs
maelstrom_csp/tests/: test_io.rs  test_node.rs
maelstrom_csp/tests/common/: mod.rs
maelstrom_csp2/: Cargo.toml
maelstrom_csp2/src/: io.rs  kv.rs  lib.rs  message.rs  node.rs  rpc_error.rs  util.rs
maelstrom_csp2/tests/: test_io.rs  test_node.rs
maelstrom_csp2/tests/common/: mod.rs
message_macro/: Cargo.toml
message_macro/src/: lib.rs
old_challenge1/: Cargo.toml
old_challenge2/: Cargo.toml
scripts/: run
