[package]
name = "maelstrom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.75"
futures = "^0.3.30"
log = "^0.4.20"
serde = { version = "^1.0.193", features = ["derive"] }
serde_json = "^1.0.108"
thiserror = "^1.0.52"
tokio = { version = "^1.35.1", features = ["io-util", "io-std", "macros", "rt", "sync", "time"] }